--- a/widget.ui
+++ b/widget.ui
@@ -77,6 +77,23 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="btnDeleteCategory">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="rsc.qrc">
+          <normaloff>:/img/15514 - editdelete.png</normaloff>:/img/15514 - editdelete.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>24</width>
+          <height>24</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
