Add image delete category.

--- a/rsc.qrc
+++ b/rsc.qrc
@@ -6,5 +6,6 @@
         <file>img/2835258_long arrow_down_arrow_down arrow_downward.png</file>
         <file>img/2835260_control_more_options_menu select_list view_menu.png</file>
         <file>img/15514 - editdelete.png</file>
+        <file>img/118277.png</file>
     </qresource>
 </RCC>
