--- a/rsc.qrc
+++ b/rsc.qrc
@@ -7,5 +7,8 @@
         <file>img/2835260_control_more_options_menu select_list view_menu.png</file>
         <file>img/15514 - editdelete.png</file>
         <file>img/118277.png</file>
+        <file>img/editurl.png</file>
+        <file>img/openurl.png</file>
+        <file>img/quiturl.png</file>
     </qresource>
 </RCC>
