--- a/widget.ui
+++ b/widget.ui
@@ -122,7 +122,7 @@
       <item>
        <widget class="QComboBox" name="cboTheme">
         <property name="editable">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <item>
          <property name="text">
