--- a/rsc.qrc
+++ b/rsc.qrc
@@ -10,5 +10,8 @@
         <file>img/editurl.png</file>
         <file>img/openurl.png</file>
         <file>img/quiturl.png</file>
+        <file>img/7278151.png</file>
+        <file>img/down.png</file>
+        <file>img/up.png</file>
     </qresource>
 </RCC>
