--- a/widget.ui
+++ b/widget.ui
@@ -40,7 +40,7 @@
         <item>
          <widget class="QToolButton" name="btnLogIn">
           <property name="toolTip">
-           <string>Iniciar sesión</string>
+           <string>Iniciar sesión (Ctrl+L)</string>
           </property>
           <property name="text">
            <string>...</string>
@@ -48,6 +48,20 @@
           <property name="icon">
            <iconset resource="rsc.qrc">
             <normaloff>:/img/login.png</normaloff>:/img/login.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="btnLogOut">
+          <property name="toolTip">
+           <string>Cerrar Sesión (Ctrl+Q)</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="rsc.qrc">
+            <normaloff>:/img/logout.png</normaloff>:/img/logout.png</iconset>
           </property>
          </widget>
         </item>
@@ -96,7 +110,7 @@
          </size>
         </property>
         <property name="editable">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -383,17 +397,31 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="lblState">
-     <property name="frameShape">
-      <enum>QFrame::NoFrame</enum>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <item>
+      <widget class="QLabel" name="lblState">
+       <property name="frameShape">
+        <enum>QFrame::NoFrame</enum>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="lblInfo">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
