Code improvements, moved most of the functions that connect to the database, to keep them separate from the layout or presentation view, these functions were moved to the HelperDataBase_t class. The password recovery form also began to be implemented and designed.

--- a/logindialog.ui
+++ b/logindialog.ui
@@ -208,7 +208,7 @@
              <item>
               <widget class="QPushButton" name="btnResetPassword">
                <property name="text">
-                <string>Resetear password</string>
+                <string>Reset password</string>
                </property>
               </widget>
              </item>
