--- a/resetpassworddialog.ui
+++ b/resetpassworddialog.ui
@@ -19,7 +19,7 @@
      <widget class="QWidget" name="page">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QLineEdit" name="lineEdit">
+        <widget class="QLineEdit" name="txtUser">
          <property name="toolTip">
           <string/>
          </property>
@@ -44,7 +44,7 @@
           </spacer>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton">
+          <widget class="QPushButton" name="btnValidarUsuario">
            <property name="text">
             <string>Validar usuario</string>
            </property>
