--- a/resetpassworddialog.ui
+++ b/resetpassworddialog.ui
@@ -245,7 +245,7 @@
            </property>
            <property name="icon">
             <iconset resource="rsc.qrc">
-             <normaloff>:/img/open.png</normaloff>:/img/open.png</iconset>
+             <normaloff>:/img/close.png</normaloff>:/img/close.png</iconset>
            </property>
           </widget>
          </item>
@@ -270,7 +270,7 @@
            </property>
            <property name="icon">
             <iconset resource="rsc.qrc">
-             <normaloff>:/img/open.png</normaloff>:/img/open.png</iconset>
+             <normaloff>:/img/close.png</normaloff>:/img/close.png</iconset>
            </property>
           </widget>
          </item>
