--- a/logindialog.ui
+++ b/logindialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>381</width>
-    <height>443</height>
+    <height>433</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -119,6 +119,21 @@
          <string>Nuevo usuario</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
+         <property name="spacing">
+          <number>6</number>
+         </property>
+         <property name="leftMargin">
+          <number>4</number>
+         </property>
+         <property name="topMargin">
+          <number>4</number>
+         </property>
+         <property name="rightMargin">
+          <number>4</number>
+         </property>
+         <property name="bottomMargin">
+          <number>4</number>
+         </property>
          <item>
           <widget class="QLineEdit" name="txtNewUser"/>
          </item>
