--- a/dlgnewcategory.ui
+++ b/dlgnewcategory.ui
@@ -20,6 +20,18 @@
       <string>Category</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="leftMargin">
+       <number>4</number>
+      </property>
+      <property name="topMargin">
+       <number>4</number>
+      </property>
+      <property name="rightMargin">
+       <number>4</number>
+      </property>
+      <property name="bottomMargin">
+       <number>4</number>
+      </property>
       <item>
        <widget class="QLineEdit" name="txtCategory">
         <property name="placeholderText">
