--- a/widget.ui
+++ b/widget.ui
@@ -257,6 +257,18 @@
       </item>
       <item>
        <widget class="QComboBox" name="cboTheme">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="baseSize">
+         <size>
+          <width>0</width>
+          <height>30</height>
+         </size>
+        </property>
         <property name="editable">
          <bool>false</bool>
         </property>
